src/objects/Call_Centre_Coaching_Inbound__c.object
<CustomObject>
    <description>Call centre Inbound Coaching Form - Perfect Call</description>
    <fields>
        <fullName>Accurately_Update_Systems__c</fullName>
        <description>Do case, call wrap etc. match the customers call request and is the request accurately recorded.  NB If the customer has expressed disatisfaction has this been recorded as a complaint</description>
        <inlineHelpText>Do case, call wrap etc. match the customers call request and is the request accurately recorded.  Has the agent identified through questioning the correct CAMPAIGN CODE and entered this correctly</inlineHelpText>
        <label>Accurately Update Systems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#33FF33</color>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FF0000</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <color>#FF6600</color>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_use_of_Customer_Name__c</fullName>
        <description>Did the consultant use the customers name appropriately throughout the call to control their attention? (suggested around signposting)</description>
        <inlineHelpText>Did the consultant use the customers name appropriately throughout the call to control their attention? (suggested around signposting)</inlineHelpText>
        <label>Appropriate use of Customer Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefits_of_SMART_Banking__c</fullName>
        <description>Did we outline to the customer the benefits of IVR verification i.e. we can handle their call more quickly as well as facilities offered via on-line banking if appropriate?</description>
        <inlineHelpText>Did we outline to the customer the benefits of IVR verification i.e. we can handle their call more quickly as well as facilities offered via on-line banking if appropriate?</inlineHelpText>
        <label>Benefits of SMART Banking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Centre_KPI_s_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link of Call centre KPI&apos;s to call coaching inbound</description>
        <label>Call Centre KPI&apos;s Link</label>
        <referenceTo>Call_Centre_KPI_s__c</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Centre_Sales_Coaching_Record_link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Call centre sales coaching records</description>
        <label>Call Centre Sales Coaching Record link</label>
        <referenceTo>Call_Centre_Sales_Coaching_Record__c</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Transaction_Type__c</fullName>
        <inlineHelpText>Please select what the main purpose of the customer call was?</inlineHelpText>
        <label>Call Transaction Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BACS</fullName>
                </value>
                <value>
                    <fullName>CHAPS</fullName>
                </value>
                <value>
                    <fullName>Internal transfers</fullName>
                </value>
                <value>
                    <fullName>DD Cancellation</fullName>
                </value>
                <value>
                    <fullName>Standing Order Amendment</fullName>
                </value>
                <value>
                    <fullName>Standing Order cancellation</fullName>
                </value>
                <value>
                    <fullName>Standing Order set up</fullName>
                </value>
                <value>
                    <fullName>Card query/Cancellation request</fullName>
                </value>
                <value>
                    <fullName>PIN request</fullName>
                </value>
                <value>
                    <fullName>Account Closure request</fullName>
                </value>
                <value>
                    <fullName>PIB/Cheque Book request</fullName>
                </value>
                <value>
                    <fullName>OB password/memorable info re-set</fullName>
                </value>
                <value>
                    <fullName>Securecode</fullName>
                </value>
                <value>
                    <fullName>Account Enquiry</fullName>
                </value>
                <value>
                    <fullName>60 Day notice withdrawal request</fullName>
                </value>
                <value>
                    <fullName>TD withdrawal request</fullName>
                </value>
                <value>
                    <fullName>Incoming payment issue</fullName>
                </value>
                <value>
                    <fullName>Change of Information</fullName>
                </value>
                <value>
                    <fullName>Transaction disputes</fullName>
                </value>
                <value>
                    <fullName>Online re-set</fullName>
                </value>
                <value>
                    <fullName>Complaint Call</fullName>
                </value>
                <value>
                    <fullName>HPP Apppointments</fullName>
                </value>
                <value>
                    <fullName>HPP -not eligible</fullName>
                </value>
                <value>
                    <fullName>Sales lead</fullName>
                </value>
                <value>
                    <fullName>Branch Enquiry</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coachee_s_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coachee&apos;s Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colleagues_Signature__c</fullName>
        <inlineHelpText>Colleague to Sign Here</inlineHelpText>
        <label>Colleagues Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments10__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments11__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments12__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliant__c</fullName>
        <formula>IF( 
OR(TEXT( Correct_ID_V__c )=&quot;No&quot;, 
TEXT( Provide_Accurate_not_misleading_infor__c )=&quot;No&quot;,
TEXT( Accurately_Update_Systems__c )=&quot;No&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOk&quot;, &quot;Non-Compliant&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOf&quot;, &quot;Compliant&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Customer_Satisfaction__c</fullName>
        <description>Did the consultant during the call close confirm the customers satisfaction with the service received? e.g. Are you happy with everything we&apos;ve discussed today?</description>
        <inlineHelpText>Did the consultant during the call close confirm the customers satisfaction with the service received? e.g. Are you happy with everything we&apos;ve discussed today?</inlineHelpText>
        <label>Confirm Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Contact_Details__c</fullName>
        <description>Did we confirm and update the customers contact details on the call?</description>
        <inlineHelpText>Did we confirm and update the customers contact details on the call?</inlineHelpText>
        <label>Correct Contact Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_ID_V__c</fullName>
        <description>Did the customer come through verified.  If not did we complete manual verfication in line with agreed process.  Was this handled in an empathetic way for the customer?  If we could not verify the customer did we explain clearly why and this was for the customers own protection and what actions/alternatives are required/available to them</description>
        <inlineHelpText>Did the customer come through verified.  If not did we complete manual verfication in line with agreed process.  Was this handled in an empathetic way for the customer?  If we could not verify the customer did we explain clearly why?</inlineHelpText>
        <label>Correct ID &amp; V</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courteous_professional__c</fullName>
        <description>Did the consultant confirm with the customer that they understood the cover discussed whilst mirroring the customers pace of understanding?</description>
        <inlineHelpText>Did the consultant confirm with the customer that they understood the cover discussed whilst mirroring the customers pace of understanding?</inlineHelpText>
        <label>Courteous &amp; professional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account details</description>
        <inlineHelpText>Customer Account details</inlineHelpText>
        <label>Customer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call_Centre_Coaching_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please Enter the customer EBA Number</description>
        <inlineHelpText>Please Enter the customer EBA Number</inlineHelpText>
        <label>Customer Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_name_Active_listening__c</fullName>
        <description>Did the consultant gather and use the customers name in the call opening.  Was this doen in a friendly and enthusiastic way</description>
        <inlineHelpText>Did the consultant gather and use the customers name in the call opening.  Was this doen in a friendly and enthusiastic way</inlineHelpText>
        <label>Customer name &amp; Active listening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ownership__c</fullName>
        <description>Did the consultant re-cap the customer requirements with them, confirm understanding, clearly outline next steps and timescales involved and take personal ownership (where appropriate) for reolsution</description>
        <inlineHelpText>Did the consultant re-cap the customer requirements with them, confirm understanding, clearly outline next steps and timescales involved and take personal ownership (where appropriate) for reolsution</inlineHelpText>
        <label>Customer ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customers_name__c</fullName>
        <inlineHelpText>Please neter the customers name</inlineHelpText>
        <label>Customers name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Observation__c</fullName>
        <description>Date Coaching record completed</description>
        <inlineHelpText>Date Coaching record completed</inlineHelpText>
        <label>Date of Observation</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_of_Call__c</fullName>
        <description>Date and time of customer call observed</description>
        <inlineHelpText>Date and time of customer call observed</inlineHelpText>
        <label>Date &amp; time of Call</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EBS_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter EBS account number</inlineHelpText>
        <label>EBS Account Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound (EBS Account Number)</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBS_Customer_No__c</fullName>
        <inlineHelpText>Please enter EBS Number for the customer (Maximum 6 digit nmemonic)</inlineHelpText>
        <label>EBS Customer No.</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBS_Customer_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter EBS number</inlineHelpText>
        <label>EBS Customer Number</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound (EBS Customer Number)</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Empathy__c</fullName>
        <description>Did the consultant actively listen to the customers request and clearly understand the customers requirements?  Did they use appropriate questionining and positive phrases e.g. rest assured I will get this resolved for you, I do understand your inconvenience?  I will be more than happy to get that sorted for you? I completeley understand your situation?</description>
        <inlineHelpText>Did the consultant actively listen to the customers request and clearly understand the customers requirements?  Did they use appropriate questionining and positive phrases?</inlineHelpText>
        <label>Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greet_the_Customer__c</fullName>
        <description>Did they use the standard call opening adopting a warm and friendly tone, allowing the customer to respond where applicable?</description>
        <inlineHelpText>Did they use the standard call opening adopting a warm and friendly tone, allowing the customer to respond where applicable?</inlineHelpText>
        <label>Greet the Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identifying_Other_Needs__c</fullName>
        <description>Did the consultant listen attentively during the call and confidently present any potential other suitable products to the customer e.g. notice account fixed term deposits, HPP</description>
        <inlineHelpText>Did the consultant listen attentively during the call and confidently present any potential other suitable products to the customer e.g. notice account fixed term deposits, HPP.  Did the agent create the opportunity/lead with correct CAMPAIGN CODE</inlineHelpText>
        <label>Identifying Other Needs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_learning_next_call_Maximum_3__c</fullName>
        <description>Enter three development areas to be implemented before next call coaching observation</description>
        <inlineHelpText>Enter three development areas to be implemented before next call coaching observation
1
2
3</inlineHelpText>
        <label>Key learning next call (Maximum 3)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Manager_Signature__c</fullName>
        <inlineHelpText>Line Manager Signature</inlineHelpText>
        <label>Line Manager Signature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Missed_Alerts__c</fullName>
        <inlineHelpText>Did the consultant miss any alerts on the customers profile</inlineHelpText>
        <label>Missed Alerts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Coach</description>
        <inlineHelpText>Name of Coach</inlineHelpText>
        <label>Name of Coach</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Centre_Coaching_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_further_Assistance__c</fullName>
        <description>Did the consultant during the call close ask the customer if they could be of further assistance? e.g. Is there anything else I can help you with today?</description>
        <inlineHelpText>Did the consultant during the call close ask the customer if they could be of further assistance? e.g. Is there anything else I can help you with today?</inlineHelpText>
        <label>Offer further Assistance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Call_Verification_Points__c</fullName>
        <formula>IF(OR(TEXT( Greet_the_Customer__c )=&quot;Yes&quot;, TEXT( Greet_the_Customer__c )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT(  Reason_for_calling__c  )=&quot;Yes&quot;, TEXT( Reason_for_calling__c  )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT(  Correct_ID_V__c )=&quot;Yes&quot;, TEXT( Correct_ID_V__c )=&quot;N/A&quot;), 10, 0) +
IF(OR(TEXT( Benefits_of_SMART_Banking__c  )=&quot;Yes&quot;, TEXT(Benefits_of_SMART_Banking__c  )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT(  Correct_Contact_Details__c  )=&quot;Yes&quot;, TEXT(  Correct_Contact_Details__c  )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT( Customer_name_Active_listening__c  )=&quot;Yes&quot;, TEXT(Customer_name_Active_listening__c   )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT( Placing_Customers_on_Hold__c  )=&quot;Yes&quot;, TEXT(Placing_Customers_on_Hold__c   )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Call &amp; Verification Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between opportunity and Call centre Inbound Coaching scores</description>
        <label>Opportunity Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Spotting_and_Close_Points__c</fullName>
        <formula>IF(OR(TEXT(  Recap_Call__c  )=&quot;Yes&quot;, TEXT( Recap_Call__c   )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Identifying_Other_Needs__c  )=&quot;Yes&quot;, TEXT( Identifying_Other_Needs__c   )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Sharia_a_Compliance__c  )=&quot;Yes&quot;, TEXT(Sharia_a_Compliance__c    )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Confirm_Customer_Satisfaction__c  )=&quot;Yes&quot;, TEXT(  Confirm_Customer_Satisfaction__c  )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT( Offer_further_Assistance__c   )=&quot;Yes&quot;, TEXT(Offer_further_Assistance__c     )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT( Standard_Call_Close__c   )=&quot;Yes&quot;, TEXT( Standard_Call_Close__c    )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Spotting and Close Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Call_Rating__c</fullName>
        <description>Scoring of call based upon overall % (i.e.95-100% Outstanding, 85-95% Good, 75-85% Development required, &lt;75% Unacceptable)</description>
        <inlineHelpText>based upon % Call rating</inlineHelpText>
        <label>Overall Call Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Development required</fullName>
                </value>
                <value>
                    <fullName>Unacceptable - ROC required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Commentary__c</fullName>
        <description>Commentary on call</description>
        <inlineHelpText>Commentary on call</inlineHelpText>
        <label>Overall Commentary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Pace_Tone_Pitch__c</fullName>
        <description>Did the consultant adopt an appropriate tone, pace and pitch to suit the customer throughout the whole call</description>
        <inlineHelpText>Did the consultant adopt an appropriate tone, pace and pitch to suit the customer throughout the whole call</inlineHelpText>
        <label>Overall Pace, Tone &amp; Pitch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Record</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Call Centre Coaching Inbound</relationshipLabel>
        <relationshipName>Call_Centre_Coaching_Inbound</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placing_Customers_on_Hold__c</fullName>
        <description>If the customer is placed on hold is the reason clearly explained and customer returned to every 30 seconds to ask if still o.k. to hold.  If appropriate was a customer call back offered?</description>
        <inlineHelpText>If the customer is placed on hold is the reason clearly explained and customer returned to every 30 seconds to ask if still o.k. to hold.  If appropriate was a customer call back offered?</inlineHelpText>
        <label>Placing Customers on Hold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Development_Max_3__c</fullName>
        <label>Previous Development (Max 3)</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Procedural_Knowledge_Points__c</fullName>
        <formula>IF(OR(TEXT(  Provide_Accurate_not_misleading_infor__c  )=&quot;Yes&quot;, TEXT(Provide_Accurate_not_misleading_infor__c )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Product_process_Knowledge__c  )=&quot;Yes&quot;, TEXT(Product_process_Knowledge__c   )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Technical_Knowledge__c  )=&quot;Yes&quot;, TEXT(Technical_Knowledge__c  )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Accurately_Update_Systems__c  )=&quot;Yes&quot;, TEXT(Accurately_Update_Systems__c   )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Signpost_Next_Steps__c  )=&quot;Yes&quot;, TEXT(Signpost_Next_Steps__c   )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process / Procedural Knowledge Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_process_Knowledge__c</fullName>
        <description>Did the consultant confidently portray up to date and accurate product/technical information to the customer</description>
        <inlineHelpText>Did the consultant confidently portray up to date and accurate product/technical information to the customer</inlineHelpText>
        <label>Product/process Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_Accurate_not_misleading_infor__c</fullName>
        <description>Did the consultant provide accurate process and product information to the customer and was this done in a timely and friendly manner in response to the customer request</description>
        <inlineHelpText>Did the consultant provide accurate process and product information to the customer and was this done in a timely and friendly manner in response to the customer request</inlineHelpText>
        <label>Provide Accurate &amp; not misleading infor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_and_Behaviours_Points__c</fullName>
        <formula>IF(OR(TEXT(  Overall_Pace_Tone_Pitch__c  )=&quot;Yes&quot;, TEXT(Overall_Pace_Tone_Pitch__c   )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT( Appropriate_use_of_Customer_Name__c   )=&quot;Yes&quot;, TEXT(Appropriate_use_of_Customer_Name__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality and Behaviours Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>